--- a/index.html
+++ b/index.html
@@ -175,6 +175,37 @@
         <div id="work-experience" class="title"> __ A Glance Through My Technical Experience __ </div>
       </div>
 
+    <!-- Enterprise Holdings -->
+      <div class="container" id="enterprise">
+
+        <div class="template-header" id="enterprise-header"> A summer to remember </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <img class="template-logo" id="id-logo" src="images/enterpriseHoldings.png" alt="Enterprise logo">
+          </div>
+
+          <div class="col-md-8" id="template-description">
+            <div class="h4 template-name"> Software Engineer Intern, Enterprise Holdings</div>
+            <div class="h6 template-year">Summer 2019</div>
+            <div class="h6 template-location">St. Louis, MO </div>
+          <hr>
+
+            <div class="template-gist">
+              <ul style="list-style-type:circle">
+                <li>  Revamped Zimride's monolithic PHP application to <strong>React/Redux</strong> to develop scalable, secure and maintainable app by collaborating with two senior software engineers.</li>
+                <li>  Created UI components for data visualization in admin management pages for business customers. </li>
+                <li>  Built backend with <strong>Java</strong>-based REST API using Spring framework and JPA with Hibernate as the persistence
+                  layer – running on Linux + Tomcat + AWS EC2 stack. </li>
+                <li>  Learned and practiced Agile software methodology using JIRA and contributed ideas in choosing efficient
+                  libraries to handle API responses in team meetings with senior technical manager. </li>
+                
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 <!-- ID Tech Section -->
       <div class="container" id="id-tech">
